# lean-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  smoke_test.py
analysis/: aggregate.py  check_premises.py  review.py  taxonomy.py
corpus/: and-swap.json  fpil_bounds_01.json  fpil_bounds_02.json  fpil_helper_01.json  fpil_list_01.json  fpil_plusr_01.json  fpil_termination_01.json  fpil_tree_01.json  fpil_tree_02.json  love_arith_01.json  love_deptype_01.json  love_helper_01.json  love_helper_02.json  love_induction_01.json  love_induction_02.json  love_induction_03.json  love_list_01.json  love_logic_01.json  love_logic_02.json  love_logic_03.json  love_pred_01.json  love_pred_02.json  love_pred_03.json  love_pred_04.json  love_quant_01.json  love_quant_02.json  love_spec_01.json  love_spec_02.json  love_spec_03.json  love_tree_01.json  schema.md  seed_provenance.md
harness/: corpus.py  prompts.py  runner.py  verifier.py
harness/providers/: __init__.py  deepseek.py  fireworks.py  gemini.py  nim.py  openai.py  rate_limit.py  smoke_test.py
results/: run_clean_20260601.jsonl
