[project]
name = "lean-benchmark"
version = "0.1.0"
description = "LLM benchmark for Lean proof obligations"
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "openai",
    "pydantic",
    "python-dotenv",
    "tenacity",
    "rich",
    "pytest",
    "pandas>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]
